--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ html, body {
 
 <div class="box">
     <!-- Display the countdown timer in       an element -->
-    <p></p>
+    <p>aaaa</p>
+   <hr>
     <p id="demo"></p>
 </div>
 
