--- a/jqScribble/example.html
+++ b/jqScribble/example.html
@@ -66,6 +66,9 @@
 			<a href="#" onclick='$("#test").data("jqScribble").save();'>Save</a>
 			<a href="#" onclick='save();'>Custom Save</a>
 		</div>
+
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
 		<script type="text/javascript">
 		function save()
 		{
