--- a/jqScribble/example.html
+++ b/jqScribble/example.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 			
-		<script src="http://code.jquery.com/jquery-1.5.2.min.js" type="text/javascript" ></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="jquery.jqscribble.js" type="text/javascript"></script>
 		<script src="jqscribble.extrabrushes.js" type="text/javascript"></script>
 		
